--- a/backend/views/product/add.html
+++ b/backend/views/product/add.html
@@ -1,5 +1,5 @@
 <div class="page-head">
-    <h2 class="page-head-title">商品管理</h2>
+    <h2 class="page-head-title">添加商品</h2>
 
 </div>
 
@@ -10,31 +10,45 @@
                 <div class="panel-heading panel-heading-divider">添加商品<span class="panel-subtitle"></span></div>
                 <div class="panel-body">
                     <form action="/product/insert" style="border-radius: 0px;" class="form-horizontal group-border-dashed" method="post" >
-
+                        <input name="shopid" value="{{.shopid}}" hidden>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">商品名称</label>
+                            <label class="col-sm-3 control-label">名称</label>
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" name="ProductName"  >
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">商品数量</label>
+                            <label class="col-sm-3 control-label">数量</label>
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" name="ProductNum"  >
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">商品图片地址</label>
+                            <label class="col-sm-3 control-label">旧价格</label>
+                            <div class="col-sm-6">
+                                <input type="text"   class="form-control" name="ProductOldprice"  >
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">新价格</label>
+                            <div class="col-sm-6">
+                                <input type="text"   class="form-control" name="ProductNewprice"  >
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">图片</label>
                             <div class="col-sm-6">
                                 <input type="text"   class="form-control" name="ProductImage"  >
                             </div>
                         </div>
+
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">商品访问链接</label>
+                            <label class="col-sm-3 control-label">描述</label>
                             <div class="col-sm-6">
-                                <input type="text"   class="form-control" name="ProductUrl"  >
+                                <textarea name="ProductDescription" class="form-control"></textarea>
                             </div>
                         </div>
+
                         <div class="row xs-pt-15">
                             <div class="col-xs-6">
                                 <p class="text-right">
