--- a/backend/views/product/view.html
+++ b/backend/views/product/view.html
@@ -1,5 +1,5 @@
 <div class="page-head">
-    <h2 class="page-head-title">商品管理</h2>
+    <h2 class="page-head-title">商品列表</h2>
 </div>
 
 <div class="main-content container-fluid">
@@ -16,7 +16,6 @@
                             <tr>
                                 <th style="width:17%;">商品图片</th>
                                 <th style="width:25%;">商品名称</th>
-                                <th style="width:25%;">商品链接</th>
                                 <th style="width:25%;">商品数量</th>
                                 <th style="width:30%;">操作</th>
                             </tr>
@@ -24,10 +23,9 @@
                             <tbody>
                             {{range $i, $v := .productArray}}
                             <tr>
-                                <td class="cell-detail"><img src="{{$v.ProductImage}}" alt="Avatar"> </td>
+                                <td class="cell-detail"><img src="{{$v.ProductImage}}" alt="Avatar" width="35px" height="35px"> </td>
                                 <td class="milestone"> {{$v.ProductName}}
                                 </td>
-                                <td class="cell-detail">{{$v.ProductUrl}}</td>
                                 <td class="cell-detail">{{$v.ProductNum}}</td>
                                 <td class="cell-detail"><a href="/product/update?id={{$v.ID}}"><button class="btn btn-space btn-primary">修改</button></a> <a href="/product/delete?id={{$v.ID}}"><button class="btn btn-space btn-danger">删除</button></a>   </td>
                             </tr>
